[metadata]
name = pari-utils
version = file: VERSION
description = utilities for PARI/GP
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Vincent Delecroix
author_email = vincent.delecroix@u-bordeaux.fr
url = https://gitlab.com/sagemath/pari-utils
download_url = https://pypi.org/project/pari-utils/#files
license = GPL v3
platforms = any
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: C++
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Operating System :: Unix
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    PARI/GP

[options]
packages = pari_utils
